# papermc-downloader-cpp

./: .gitignore  CMakeLists.txt  PaperMC-tool.sln  linux-build.sh  premake5.lua  win-build.bat
PaperMC-tool/: Cli.cpp  Cli.h  Main.cpp  PaperMC-tool.vcxproj  PaperMC-tool.vcxproj.filters  PaperMC.cpp  PaperMC.h
lib/: libcurl.lib
